--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@
     width: 100%;
 }
 .navbar .menu-wrapper .menu{
-    margin: auto;
+    margin: 0 auto;
 }
 
 .navbar .logo{
@@ -84,4 +84,46 @@
     margin-right: 20px;
     color: var(--primary-color);
 }
+.navbar .menuOpen{
+    font-size: 40px;
+    color: #1E6F5C;
+}
 /* navbar end */
+
+/* responsive */
+@media screen and (max-width: 768px){
+    .navbar .menu-wrapper{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background-color: var(--primary-color);
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        clip-path: circle(0.3% at 100% 0);
+        transition: .3s ease-in-out;
+    }
+    .navbar .menu-wrapper.active{
+        clip-path: circle(141.2% at 100% 0);
+        transition: .3s ease-in-out;
+    }
+    .navbar .icons i{
+        color:#E6DD3B !important;
+    }
+    .navbar .menu a{
+        display: block;
+        margin: 50px 0;
+    }
+    .navbar .menuClose{
+        position: absolute;
+        top: 10px;
+        right: 30px;
+        font-size: 40px;
+        color:#E6DD3B;
+    }
+    .navbar .menu a.active{
+        color: #E6DD3B;
+    }
+}
