--- a/css/style.css
+++ b/css/style.css
@@ -214,6 +214,65 @@
 }
 /* panel end */
 
+/* service start */
+.service{
+    margin-top: 250px;
+
+}
+.service .container{
+    margin: auto;
+}
+.service .row1{
+    text-align: center;
+
+}
+
+.service .label{
+    font-family: var(--heading-font);
+    font-weight: 800;
+    color: var(--primary-color);
+}
+.service .title{
+    font-family: var(--heading-font);
+    font-size: 30px;
+    color: #2E2828;
+    margin-top: 20px;
+}
+.service .row2{
+    margin-top: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+/* service end */
+.row2 .img-box{
+    position: relative;
+}
+.row2 .img-box:hover .detail{
+    clip-path: circle(141.2% at 100% 0);
+    transition: 0.3s ease-in-out;
+}
+.row2 .detail{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(30, 111, 92, 0.52);
+    backdrop-filter: blur(6.5px);
+    border-radius: 10px;
+    clip-path: circle(0.8% at 100% 0);
+    transition: 0.3s ease-in-out;
+}
+.row2 .detail a{
+    font-family: var(--heading-font);
+    font-weight: 800;
+    font-size: 25px;
+    color: #ECE7B4;
+}
 /* responsive */
 @media screen and (max-width: 768px){
     .navbar .container{
