--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,11 @@
     justify-content: center;
     align-items: center;
 }
+.navbar.active{
+    height: 100px;
+    background-color: #fff;
+    box-shadow: 0 1px 10px #2e282860;
+}
 .navbar .container{
     margin: auto;
     width: 100%;
